--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "cookie": "^1.0.2",
+    "cross-spawn": "^7.0.6",
     "firebase": "^10.13.2",
-    "jotai": "^2.11.0",
+    "install": "^0.13.0",
+    "jotai": "^2.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts start",
