--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,35 +24,35 @@ jobs:
         run: CI=false npm run build
         # working-directory: frontend-service
     
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v2
+      #   with:
+      #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #       aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Copy build folder to terraform directory
-        run: cp -r ./build ./terraform/
+      # - name: Copy build folder to terraform directory
+      #   run: cp -r ./build ./terraform/
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      # - name: Set up Terraform
+      #   uses: hashicorp/setup-terraform@v2
 
-      # Initialize Terraform for the "upload" environment
-      - name: Terraform Init
-        working-directory: terraform
-        run: terraform init
+      # # Initialize Terraform for the "upload" environment
+      # - name: Terraform Init
+      #   working-directory: terraform
+      #   run: terraform init
 
-      # Plan Terraform changes for the "upload" environment
-      - name: Terraform Plan
-        working-directory: terraform
-        run: terraform plan
+      # # Plan Terraform changes for the "upload" environment
+      # - name: Terraform Plan
+      #   working-directory: terraform
+      #   run: terraform plan
 
-      # Apply Terraform changes for the "upload" environment
-      - name: Terraform Apply
-        working-directory: terraform
-        run: terraform apply -auto-approve
+      # # Apply Terraform changes for the "upload" environment
+      # - name: Terraform Apply
+      #   working-directory: terraform
+      #   run: terraform apply -auto-approve
     
-      # Verify deletion
-      - name: List bucket contents after deletion
-        run: aws s3 ls s3://iteamoa-frontend --recursive
+      # # Verify deletion
+      # - name: List bucket contents after deletion
+      #   run: aws s3 ls s3://iteamoa-frontend --recursive
 
